// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tile component Should concat classname in props with Bulma classname 1`] = `
<div
  className="tile other-class this-is-a-test"
>
  <p>
    Default
  </p>
</div>
`;

exports[`Tile component Should exist 1`] = `[Function]`;

exports[`Tile component Should have notification classname 1`] = `
<div
  className="tile"
>
  <img
    alt="placeholder"
    src="http://bulma.io/images/placeholders/128x128.png"
  />
</div>
`;

exports[`Tile component Should render as Section 1`] = `
<section
  className="tile"
>
  <p>
    Default
  </p>
</section>
`;

exports[`Tile component Should use inline styles 1`] = `
<div
  className="tile"
  style={
    Object {
      "height": 250,
    }
  }
>
  <p>
    Default
  </p>
</div>
`;

exports[`Tile component Should use use color danger 1`] = `
<div
  className="tile is-danger"
  notification={true}
>
  <p>
    Default
  </p>
</div>
`;

exports[`Tile component Should use use color dark 1`] = `
<div
  className="tile is-dark"
  notification={true}
>
  <p>
    Default
  </p>
</div>
`;

exports[`Tile component Should use use color info 1`] = `
<div
  className="tile is-info"
  notification={true}
>
  <p>
    Default
  </p>
</div>
`;

exports[`Tile component Should use use color link 1`] = `
<div
  className="tile is-link"
  notification={true}
>
  <p>
    Default
  </p>
</div>
`;

exports[`Tile component Should use use color null 1`] = `
<div
  className="tile"
  notification={true}
>
  <p>
    Default
  </p>
</div>
`;

exports[`Tile component Should use use color primary 1`] = `
<div
  className="tile is-primary"
  notification={true}
>
  <p>
    Default
  </p>
</div>
`;

exports[`Tile component Should use use color success 1`] = `
<div
  className="tile is-success"
  notification={true}
>
  <p>
    Default
  </p>
</div>
`;

exports[`Tile component Should use use color text 1`] = `
<div
  className="tile is-text"
  notification={true}
>
  <p>
    Default
  </p>
</div>
`;

exports[`Tile component Should use use color warning 1`] = `
<div
  className="tile is-warning"
  notification={true}
>
  <p>
    Default
  </p>
</div>
`;
